# tricebot-sdk

./: Cargo.toml  README.md
src/: game_settings.rs  lib.rs  trice_error.rs  tricebot.rs  utils.rs
tests/: check_auth_token.rs  create_game_test.rs  req_tests.rs
