[package]
name = "tricebot"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.58.0"
authors = [ "Tyler Bloom" ]

[dependencies]
hyper = { version = "0.14.16", features = ["client", "http1", "tcp"] }
hyper-tls = { version = "0.5.0" }
urlparse = { version = "0.7.3" }
tempfile = { version = "3.2.0" }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt", "macros"] }
dotenv = { version = "0.15" }
